added smooth scroll

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h1>Find Your New Bestie</h1>
           <p class="sub">The most amazing list of adoptable pets at your <br> fingertips. Updated fresh daily.</p>
           <div class="hero-btns">
-              <a class="btn btn-view" href="#">View Pets</a>
+              <a class="btn btn-view" href="#view-pets">View Pets</a>
               <a class="btn btn-manage" href="#">Manage Pets</a>
           </div>
       </div>
@@ -43,7 +43,7 @@
         </div>
         </header>
     </div>
-    <main>
+    <main id="view-pets">
         <h2>Meet Our Friends</h2>
         <div class="filters">
             <span>Show Me:</span>
