Added dynamic temperature feature

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="card">
               <img src="./img/sun.svg" alt="the sun">
               <h3>Sunny Play</h3>
-              <p>Our center is located in beautiful Miami, and it&rsquo;s currently 84°F at our pet playground.</p>
+              <p>Our center is located in beautiful Miami, and it&rsquo;s currently <span id="our-temp"></span>°F at our pet playground.</p>
           </div>
           <div class="card">
               <img src="./img/emoji-kiss.svg" alt="dedicated staff">
@@ -110,5 +110,6 @@
     <footer>
         <p>&copy; 2024 Fake Adoption Center. All rights reserved.</p>
     </footer>
+    <script src="./main.js"></script>
 </body>
 </html>
