started dynamic pet feature

--- a/index.html
+++ b/index.html
@@ -51,65 +51,29 @@
             <button>Dogs Only</button>
             <button>Cats Only</button>
         </div>
-        <div class="pet-cards">
-            <div class="pet-card">
-                <div class="pet-card-img">
-                    <img src="./img/barksalot.jpg" alt="Barksalot">
-                </div>
-                <div class="pet-card-content">
-                    <div class="name">
-                        <h4>Barksalot</h4>
-                        <img src="./img/envelope.svg" alt="send email">
+        <div class="pet-cards"></div>
+            <template id="pet-card-template">
+                <div class="pet-card">
+                    <div class="pet-card-img">
+                        <img src="" alt="">
                     </div>
-                    <p class="description">Barksalot is a sweet and lovable 3 year old ball of fluff. He loves carrots, celery, and playing fetch.</p>
-                    <p class="age">2 years old</p>
-                </div>
-            </div>
-            <div class="pet-card">
-                <div class="pet-card-img">
-                    <img src="./img/meowsalot.jpg" alt="Meowsalot">
-                </div>
-                <div class="pet-card-content">
-                    <div class="name">
-                        <h4>Meowsalot</h4>
-                        <img src="./img/envelope.svg" alt="send email">
+                    <div class="pet-card-content">
+                        <div class="name">
+                            <h4></h4>
+                            <img src="./img/envelope.svg" alt="send email">
+                        </div>
+                        <p class="description"></p>
+                        <p class="age"></p>
                     </div>
-                    <p class="description">Meowsalot is the most talkative cat we’ve ever come across. Constant meowing, chirping and purring!</p>
-                    <p class="age">1 year old</p>
                 </div>
-            </div>
-            <div class="pet-card">
-                <div class="pet-card-img">
-                    <img src="./img/woof.jpg" alt="Woof">
-                </div>
-                <div class="pet-card-content">
-                    <div class="name">
-                        <h4>Woof</h4>
-                        <img src="./img/envelope.svg" alt="send email">
-                    </div>
-                    <p class="description">Woof is a very talkative and sweet pup. She loves beets, plums, cuddles and jumping over low fences.</p>
-                    <p class="age">less than a year old</p>
-                </div>
-            </div>
-            <div class="pet-card">
-                <div class="pet-card-img">
-                    <img src="./img/purrsloud.jpg" alt="PurrsLoud">
-                </div>
-                <div class="pet-card-content">
-                    <div class="name">
-                        <h4>Purrsloud</h4>
-                        <img src="./img/envelope.svg" alt="send email">
-                    </div>
-                    <p class="description">Purrsloud has the loudest and most relaxing purr that’s come through our center. Come hear it yourself.
-                    </p>
-                    <p class="age">4 years old</p>
-                </div>
-            </div>
-        </div>
+            </template>
+        
     </main>
     <footer>
         <p>&copy; 2024 Fake Adoption Center. All rights reserved.</p>
     </footer>
+<!-- PET TEMPLATE -->
+
     <script src="./main.js"></script>
 </body>
 </html>
