Completed pet filter

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <h2>Meet Our Friends</h2>
         <div class="filters">
             <span>Show Me:</span>
-            <button class="active">All Pets</button>
-            <button>Dogs Only</button>
-            <button>Cats Only</button>
+            <button class="active" data-filter="all">All Pets</button>
+            <button data-filter="dog">Dogs Only</button>
+            <button data-filter="cat">Cats Only</button>
         </div>
         <div class="pet-cards"></div>
         
